# code-space

./: .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  Cargo.toml  README.md  RUST.md  astro.config.mjs  code-space.code-workspace  deno.json  global.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts  webpack.config.mjs
.config/: .eslintrc  .eslintrc.cjs  .prettierrc  eslint.mjs  format.mjs  postinstall.mjs
.devcontainer/: Dockerfile  devcontainer.json
.scripts/: env_config.mjs  swc_build.mjs  swcrc.json  ts_run.ts  update.js
.scripts/webpack/: webpack.prod.mjs
__scripts__/: check_env.mjs  config.mjs  create.mjs  playground.config.mjs
__scripts__/common/: config.mjs  index.mjs  webpack.dev.mjs  webpack.prod.mjs
__scripts__/webpack/: index.mjs  webpack.common.mjs  webpack.dev.mjs  webpack.prod.mjs
api/: README.md
app/public/: index.html
app/src/@storage/: __database.ts  __store.ts
app/src/components/: SetIntervalHook.tsx
app/src/hooks/: __utils__.ts  types.tsx  use-keypress.tsx  (+5 more)
app_client/: Cargo.toml
app_client/src/: main.rs
app_libs/: Cargo.toml
app_libs/src/: lib.rs
app_server/: Cargo.toml  README.md
app_server/public/: index.html
app_server/src/: main.rs
app_server/src/config/: mod.rs
app_server/src/database/: mod.rs
app_server/src/models/: body.rs  header.rs  mod.rs  query.rs  response.rs
apps/angular-app/: angular.json  package.json  server.ts
apps/astro-app/: README.md  astro.config.mjs  package.json
apps/backend/: .eslintrc.js  README.md  package.json
apps/docs/: next.config.js  package.json
apps/next-app/: README.md  next.config.js  next.config.mjs  package.json  tsconfig.json
apps/vite-app/: index.html  package.json  pre-server.js  tsconfig.json  vite.config.ts
apps/web/: next.config.js  package.json
apps/web-app/: index.scss  main.tsx  type-utils.tsx
basic-sort/: Cargo.toml
basic-sort/src/: basic.rs  interface.rs  lib.rs  life.rs  sort_help.rs
crates/app-client/: Cargo.toml
crates/app-compiler/: Cargo.toml
crates/app-libs/: Cargo.toml
crates/app-server/: Cargo.toml  package.json
crates/app-server/src/: config.rs  main.rs
crates/app-server/src/api/: user.rs
crates/app-server/src/home/: home.css  home.hbs  home.js  home.rs  mod.rs  template.hbs
crates/app-server/src/middleware/: auth.rs
crates/app-server/src/models/: query.rs
crates/app_client/: Cargo.toml
crates/app_libs/: Cargo.toml
crates/app_server/: Cargo.toml
crates/rust-wasm-core/: Cargo.toml
crates/rust-wasm-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/rust-wasm-node/src/: image.rs  lib.rs
crates/rust-wasm-web/: Cargo.toml  README.md  package.json
crates/rust-wasm-web/src/: api.rs  encoder.rs  lib.rs
docs/: 1.rust-language.md  2.workspace.md
dyn-static/: Cargo.toml
dyn-static/src/: cp.rs  lib.rs  main.rs  rc.rs
examples/: basic.js  basic.rs  basic_lib.mjs  console.rs  js_basic.js  js_char.js  js_class.js  js_faster.js  js_func.mjs  js_module.js  js_promise.js  js_sfc_worker.js  js_types.js  js_watch.js  js_worker.js  js_worker_thread.js  micro.rs  micro_func.rs  node.js  rc_owner.rs  rc_ownership.rs  rs_console.rs  rs_future.rs  rs_pointer.rs  rs_reg.rs  rs_strings.rs  rs_thread.rs  runtime.js  runtime.rs  strings.rs  type_transform.rs  v8_run_file.rs  v8_runtime.js
examples/javascript/: basic_lib.cjs  js_ajax.js  js_basic.js  js_class.js  js_cluster.js  js_func.mjs  js_global.js  js_sfc_worker.js  js_worker_thread.js
extensions/rsx-language-support/: README.md  package.json
playground/: package.json
playground/src/: main.tsx
queue-stack/: Cargo.toml
queue-stack/src/: lib.rs  person.rs  ref_queue.rs  ref_stack.rs
rc-ref/: Cargo.toml
rust-stream/: Cargo.toml
rust-stream/src/: main.rs  thread_pool.rs
scripts/: build.ts  config.mjs  eslint.mjs  format.mjs  sw.ts
scripts/swc/: android.ts  build.mjs  example.tsx  spack.config.cjs
scripts/webpack/: webpack.common.mjs  webpack.dev.mjs  webpack.pkg.mjs  webpack.prod.mjs
src/: lib.rs  main.rs
src/layouts/: Layout.astro
src/pages/: index.astro
src/react/: Title.tsx
src/views/: home.rs  home.rsx  home.rx
tcp-echo/: Cargo.toml
tcp-echo/src/: main.rs
tests/: fetch.test.ts  http_server.test.js  mask.test.ts
types/: global.d.ts
(+323 files in other folders)
