[package]
default-run = "cs"
edition = "2021"
name = "code-space"
version = "0.1.0"

[[bin]]
name = "cs"
path = "src/main.rs"

[[bin]]
name = "ap"
path = "src/bin/app_pack.rs"

[[bin]]
name = "as"
path = "src/bin/app_server.rs"

[[bin]]
name = "ac"
path = "src/bin/app_compiler.rs"

[dependencies]
clap = { version = "^4", features = ["derive"] }
json5 = "^0.4"
lazy_static = "^1.4.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]

[workspace]
members = [
    "packages/rsx-compiler",
    "packages/rsx-runtime",
    "packages/rsx-server",
]
