[package]
edition = "2021"
name = "code-space"
version = "0.1.0"

[dependencies]
clap = { version = "^4", features = ["derive"] }
json5 = "^0.4"
lazy_static = "^1.4.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[workspace]
members = [
    "packages/rsx-compiler",
    "packages/rsx-runtime",
    "packages/rsx-server",
]
