[package]
edition = "2021"
name = "code-space"
version = "0.1.0"

[dev-dependencies]
lazy_static = "^1.4.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[workspace]
members = [
    "server",
    "packages/rsx-backend",
    "packages/rsx-client",
    "packages/rsx-compiler",
    "packages/rsx-lsp",
    "packages/rsx-runtime",
    "packages/rsx-shared",
]
