[package]
name = "app-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
iced = "0.3"
url= "2.2"

[dev-dependencies]
