[package]
name = "app_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13.0"
actix-files = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
v8 = "0.42"
anyhow = "1.0.57"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
config = "0.13.1"
serde="1"
serde_json = "1"
futures = "0.3"
mongodb = "2.0.0"
