[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
actix-web = "^4"
actix = "^0.13"
actix-files = "^0.6"
tracing = "^0.1"
tracing-subscriber = "^0.3"
v8 = "^0.46"
anyhow = "^1"
env_logger = "^0.9"
config = "^0.13"
serde="^1"
serde_json = "^1"
futures = "^0.3"
mongodb = "2.0.0"
