[package]
edition = "2021"
name = "rust-wasm-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "^2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "^2.2.0"
imager = "^0.3.2"
image = "^0.24.2"
oxipng = "^6.0.1"
imagequant = "^4"

[build-dependencies]
napi-build = "^2"
