[package]
name = "rust-wasm-web"
version = "0.1.0"
authors = ["michaelbguo <michaelbguo@tencent.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1.6", optional = true }
wee_alloc = { version = "^0.4.5", optional = true }
wasm-bindgen = "^0.2.63"
lazy_static = "^1.4.0"
oxipng = "^5.0.1"

[dev-dependencies]
wasm-bindgen-test = "^0.3.13"
