[package]
name = "rust-wasm-web"
version = "0.1.0"
authors = ["michaelbguo <michaelbguo@tencent.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "^1.4"
console_error_panic_hook = { version = "^0.1.7" }
wee_alloc = { version = "^0.4.5" }
js-sys = { version = "^0.3" }
wasm-bindgen = { version = "^0.2" }

[dev-dependencies]
wasm-bindgen-test = "^0.3.13"
